Config: allow private parameter default value was changed

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"time":"23:59","storage":"storage","permanent_dir":"permanent","temp_dir":"tmp/Duplo","allow_private": false}
+{"time":"23:59","storage":"storage","permanent_dir":"permanent","temp_dir":"tmp/Duplo","allow_private": true}
