Docker compoe for mongo db was added

--- a/config.json
+++ b/config.json
@@ -4,5 +4,8 @@
     "storage": "storage",
     "permanent_dir": "permanent",
     "temp_dir": "tmp/Duplo",
-    "allow_private": false
+    "allow_private": true,
+    "db": {
+        "host": "mongodb://mongo:27017"
+    }
 }
