--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "temp_dir": "tmp/Duplo",
     "allow_private": true,
     "db": {
-        "host": "mongodb://mongo:27017"
+        "host": "user=postgres password=123456 dbname=filesharing host=dbpg port=5432 sslmode=disable"
     }
 }
+
