correct docker-compose file according to new sevices

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,20 @@ services:
     build: .
     ports:
     - "8080:8080"
+    environment:
+      FS_HOST: ":8080"
+      FS_DB_CONNECTION_STRING: "user=postgres password=123456 dbname=filesharing host=dbpg port=5432 sslmode=disable"
     depends_on:
     - dbpg
+    - file_service
+  file_service:
+    build: file_service
+    ports:
+    - "50051:50051"
+    environment:
+      ROOT_DIR: "storage"
+      PERMANENT_DIRECTORY: "permanent"
+      CLEAN_TIME: "23:59"
   dbpg:
     image: postgres
     ports:
