--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       FS_HOST: ":8080"
       FS_DB_CONNECTION_STRING: "user=postgres password=123456 dbname=filesharing host=dbpg port=5432 sslmode=disable"
+      FS_FILE_SERVICE_HOST: "file_service:50051"
     depends_on:
     - dbpg
     - file_service
