--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "file_service"]
-	path = file_service
-	url = git@github.com:Mikhalevich/file_service.git
+[submodule "filesharing-file-service"]
+	path = filesharing-file-service
+	url = git@github.com:Mikhalevich/filesharing-file-service.git
 [submodule "filesharing-auth-service"]
 	path = filesharing-auth-service
 	url = ./filesharing-auth-service/
