expiration session period was added; logging corrected

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       FS_FILE_SERVICE_NAME: "filesharing.fileservice"
       FS_AUTH_SERVICE_NAME: "filesharing.authservice"
       FS_PUBLIC_CERT: "/app/cert/public_key.pem"
+      FS_SESSION_EXPIRE_PERIOD_SEC: "2592000"
     depends_on:
     - file_service
     - auth_service
@@ -30,6 +31,7 @@ services:
       AS_SERVICE_NAME: "filesharing.authservice"
       AS_DB_CONNECTION_STRING: "user=postgres password=123456 dbname=filesharing host=dbpg port=5432 sslmode=disable"
       AS_PRIVATE_CERT: "/app/cert/private_key.pem"
+      AS_TOKEN_EXPIRE_PERIOD_SEC: "2592000"
     depends_on:
       - dbpg
   dbpg:
