--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,15 @@ services:
       POSTGRES_PASSWORD: 123456
     volumes:
       - filesharing-db-data:/var/lib/postgresql/data/
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   depends_on:
+  #     - dbpg
+  #   ports:
+  #     - "7000:80"
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+  #     PGADMIN_DEFAULT_PASSWORD: 123456
 volumes:
   filesharing-file-service-storage:
   filesharing-db-data:
