--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,17 @@ services:
   web:
     build: .
     ports:
-    - "8080:8080"
+      - "8080:8080"
+    volumes:
+      - file-storage-volume:/data/
     depends_on:
-    - mongo
+      - mongo
   mongo:
     image: mongo
     ports:
-    - "27017:27017"
+      - "27017:27017"
     volumes:
-    - data-volume:/data/db
+      - data-volume:/data/db
 volumes:
   data-volume:
+  file-storage-volume:
