multiple databases creation for pg was added

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "filesharing-tg-service"]
 	path = filesharing-tg-service
 	url = git@github.com:Mikhalevich/filesharing-tg-service.git
+[submodule "docker-postgresql-multiple-databases"]
+	path = docker-postgresql-multiple-databases
+	url = git@github.com:mrts/docker-postgresql-multiple-databases.git
