--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: "prometheus"
     metrics_path: "/metrics/"
     static_configs:
-      - targets: ["filesharing:8000"]
+      - targets: ["filesharing:8000", "auth:8001"]
