--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,19 +33,23 @@ services:
       MICRO_BROKER: "nats"
       MICRO_BROKER_ADDRESS: "natsd:4222"
     depends_on:
-      - file_service
+      - file
       - auth
     volumes:
       - ./config/service/filesharing.yml:/usr/share/config/filesharing.yml
-  file_service:
+  file:
     build: filesharing-file-service
+    labels:
+      co.elastic.logs/enabled: true
+      co.elastic.logs/json.keys_under_root: true
+      co.elastic.logs/json.overwrite_keys: true
+      co.elastic.logs/json.add_error_key: true
+      co.elastic.logs/json.expand_keys: true
     environment:
       FS_SERVICE_NAME: "filesharing.fileservice"
-      FS_ROOT_DIR: "/data/storage/"
-      FS_TEMP_DIR: "/data/temp/"
-      FS_PERMANENT_DIRECTORY: "permanent"
-      FS_CLEAN_TIME: "23:59"
+      FS_CONFIG_FILE: "/usr/share/config/file.yml"
     volumes:
+      - ./config/service/file.yml:/usr/share/config/file.yml
       - filesharing-file-service-storage:/data/
   auth:
     build: filesharing-auth-service
